--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@ nav {
     background-color: #333;
     opacity: 80%;
     padding: 10px;
-    
+
 }
 
 nav ul {
@@ -40,6 +40,23 @@ nav ul {
     align-items: center;
     justify-content: center;
 }
+
+footer {
+    /* position: sticky; */
+    /* opacity: 75%; */
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.grid-content {
+    display: grid;
+    grid-template-columns: auto auto auto ;
+}
+
 /* จัดการคอนเทนเนอร์หลัก */
 .logo-container {
     display: flex;
@@ -50,10 +67,12 @@ nav ul {
 /* รูปภาพโลโก้ */
 .logo-image {
     object-fit: contain;
-    width: 150px; /* ขนาดของโลโก้ */
+    width: 150px;
+    /* ขนาดของโลโก้ */
     height: auto;
     border-radius: 50%;
-    margin-right: 15px; /* เว้นระยะระหว่างโลโก้และหัวข้อ */
+    margin-right: 15px;
+    /* เว้นระยะระหว่างโลโก้และหัวข้อ */
 }
 
 /* หัวข้อ */
@@ -62,25 +81,31 @@ nav ul {
     color: #333;
     margin: 0;
 }
-@media (max-width: 768px){
-    nav ul{
+
+@media (max-width: 768px) {
+    nav ul {
         flex-direction: column;
     }
-    nav{
+
+    nav {
         padding: 10px;
     }
-    li{
+
+    li {
         padding: 8px;
     }
-    .logo-container{
+
+    .logo-container {
         flex-direction: column;
 
     }
-    .logo-container h1{
+
+    .logo-container h1 {
         margin-right: 25%;
-        font-size:larger;
+        font-size: larger;
     }
-    .logo-image{
+
+    .logo-image {
         padding-bottom: 10px;
     }
 }
